# Sourcetrail

./: .clang-format  .clang-tidy  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DOCUMENTATION.md  README.md  conanfile.txt
src/core/: CMakeLists.txt
src/core/tests/: CMakeLists.txt  CommandLineParserTestSuite.cpp  CommandlineCommandIndexTestSuite.cpp  CommandlineCommandTestSuite.cpp  CommandlineTestSuite.cpp  ConfigManagerTestSuite.cpp  FileManagerTestSuite.cpp  FilePathTestSuite.cpp  FileSystemTestSuite.cpp  LowMemoryStringMapTestSuite.cpp  StatusTestSuite.cpp  TextCodecTestSuite.cpp  UnorderedCacheTestSuite.cpp  UtilityFileFileSystemTestSuite.cpp  UtilityStringTestSuite.cpp  loggingTestSuite.cpp
src/core/utility/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  GlobalId.hpp  Status.cpp  Status.h  TextCodec.h
src/core/utility/TextAccess/: CMakeLists.txt  TextAccess.cpp  TextAccess.h
src/core/utility/applicationArchitectureType/: ApplicationArchitectureType.h  CMakeLists.txt
src/core/utility/commandline/: CMakeLists.txt
src/core/utility/commandline/commandLineParser/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h
src/core/utility/commandline/commandlineHelper/: CMakeLists.txt
src/core/utility/commandline/commands/: CMakeLists.txt
src/core/utility/commandline/commands/commandlineCommand/: CMakeLists.txt
src/core/utility/commandline/commands/commandlineCommandConfig/: CMakeLists.txt
src/core/utility/commandline/commands/commandlineCommandIndex/: CMakeLists.txt
src/core/utility/configManager/: CMakeLists.txt  ConfigManager.cpp
src/core/utility/file/: CMakeLists.txt  FilePath.h
src/core/utility/file/fileInfo/: CMakeLists.txt  FileInfo.h
src/core/utility/file/fileManager/: CMakeLists.txt  FileManager.cpp
src/core/utility/file/filePath/: CMakeLists.txt  FilePath.cpp  FilePath.h
src/core/utility/file/filePathFilter/: CMakeLists.txt  FilePathFilter.h
src/core/utility/file/fileRegister/: CMakeLists.txt  FileRegister.cpp  FileRegister.h
src/core/utility/file/fileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
src/core/utility/file/fileTree/: CMakeLists.txt  FileTree.cpp  FileTree.h
src/core/utility/file/scopedTemporaryFile/: CMakeLists.txt
src/core/utility/file/utilityFile/: CMakeLists.txt  utilityFile.cpp  utilityFile.h
src/core/utility/fileSystem/: CMakeLists.txt  IFileSystem.cpp  IFileSystem.hpp
src/core/utility/fileSystem/impls/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp
src/core/utility/fileSystem/mocks/: CMakeLists.txt  MockedFileSystem.cpp  MockedFileSystem.hpp
src/core/utility/globalId/: CMakeLists.txt  GlobalId.hpp
src/core/utility/logging/: CMakeLists.txt  logging.h
src/core/utility/lowMemoryStringMap/: CMakeLists.txt  LowMemoryStringMap.h
src/core/utility/migration/: CMakeLists.txt
src/core/utility/migrator/: CMakeLists.txt
src/core/utility/orderedCache/: CMakeLists.txt  OrderedCache.h
src/core/utility/osType/: CMakeLists.txt  OsType.h
src/core/utility/scopedFunctor/: CMakeLists.txt  ScopedFunctor.cpp  ScopedFunctor.h
src/core/utility/scopedSwitcher/: CMakeLists.txt
src/core/utility/singleValueCache/: CMakeLists.txt
src/core/utility/status/: CMakeLists.txt  Status.cpp  Status.h
src/core/utility/textCodec/: CMakeLists.txt  TextCodec.cpp  TextCodec.h
src/core/utility/timeStamp/: CMakeLists.txt
src/core/utility/to_underlying/: CMakeLists.txt  to_underlying.hpp
src/core/utility/tree/: CMakeLists.txt  Tree.h
src/core/utility/unorderedCache/: CMakeLists.txt  UnorderedCache.h
src/core/utility/utility/: CMakeLists.txt  utility.cpp  utility.h
src/core/utility/utilityString/: CMakeLists.txt
src/core/utility/utilityUuid/: CMakeLists.txt  utilityUuid.cpp  utilityUuid.h
src/core/utility/version/: CMakeLists.txt  Version.cpp
src/lib/data/storage/sqlite/: CMakeLists.txt  IReadSqliteBookmarkStorage.cpp  IReadSqliteBookmarkStorage.hpp  SqliteBookmarkStorage.cpp  SqliteBookmarkStorage.h  SqliteDatabaseIndex.cpp  SqliteDatabaseIndex.h  SqliteIndexStorage.cpp  SqliteIndexStorage.h  SqliteStorage.cpp  SqliteStorage.h
src/lib/data/storage/sqlite/factory/: CMakeLists.txt  ISqliteFactory.cpp  ISqliteFactory.hpp
src/lib/settings/: ApplicationSettingsPrefiller.cpp  CMakeLists.txt  IApplicationSettings.hpp  ProjectSettings.cpp  Settings.cpp  Settings.h
src/lib/settings/details/: ApplicationSettings.cpp  ApplicationSettings.h
src/lib/settings/migration/: SettingsMigrator.h
src/lib/settings/source_group/component/: SourceGroupSettingsWithExcludeFilters.cpp
src/lib/settings/source_group/type/: SourceGroupSettingsCxxCodeblocks.h
src/lib/tests/: ApplicationTestSuite.cpp  BookmarkControllerTestSuite.cpp  CMakeLists.txt  ComponentFactoryTestSuite.cpp  ComponentManagerTestSuite.cpp  FileHandlerTestSuite.cpp  GraphViewStyleTestSuite.cpp  IntermediateStorageTestSuite.cpp  NetworkProtocolHelperTestSuite.cpp  ProjectTestSuite.cpp  StatusBarControllerTestSuite.cpp  StatusControllerTestSuite.cpp  StorageCacheTestSuite.cpp  StorageProviderTestSuite.cpp  TabTestSuite.cpp
src/lib/tests/helper/testFileRegister/: TestFileRegister.h
src/lib/tests/helper/testStorage/: TestStorage.cpp  TestStorage.h
src/lib/tests/mocks/: MockedApplicationSetting.hpp  MockedFactory.hpp  MockedGraphView.hpp  MockedSourceGroup.hpp
src/lib_gui/tests/: CMakeLists.txt  CxxVs17HeaderPathDetectorTestSuite.cpp  utilityAppTestSuite.cpp
src/lib_gui/tests/gui/: CMakeLists.txt  QtNetworkFactoryTestSuite.cpp  QtNetworkFactoryTestSuite.hpp  QtStartScreenTestSuite.cpp  QtStartScreenTestSuite.hpp  RecentItemModelTestSuite.cpp
src/scheduling/: CMakeLists.txt  ITaskManager.hpp  Task.h  TaskGroupParallel.cpp  TaskGroupParallel.h  TaskScheduler.h
src/scheduling/impls/: TaskManager.hpp
src/scheduling/mocks/: CMakeLists.txt  MockedTaskManager.hpp
src/scheduling/tests/: CMakeLists.txt
src/test/: CMakeLists.txt  LowMemoryStringMapTestSuite.cpp
src/test/helper/: CMakeLists.txt
src/test/helper/testFileRegister/: CMakeLists.txt
src/test/helper/testStorage/: CMakeLists.txt  TestStorage.h
(+451 files in other folders)
