# ${CMAKE_SOURCE_DIR}/src/core/utility/CMakeLists.txt
add_subdirectory(applicationArchitectureType)
add_subdirectory(configManager)
add_subdirectory(file)
add_subdirectory(globalId)
add_subdirectory(logging)
add_subdirectory(lowMemoryStringMap)
add_subdirectory(orderedCache)
add_subdirectory(osType)
add_subdirectory(scopedFunctor)
add_subdirectory(scopedSwitcher)
add_subdirectory(singleValueCache)
add_subdirectory(status)
add_subdirectory(textCodec)
add_subdirectory(timeStamp)
add_subdirectory(to_underlying)
add_subdirectory(tree)
add_subdirectory(unorderedCache)
add_subdirectory(utility)
add_subdirectory(utilityString)
add_subdirectory(utilityUuid)
add_subdirectory(version)
